updating organization to state
